Fix navigation menu visibility above 481px

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,16 +3,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
+
   border-bottom: 1px solid rgba(246, 244, 244, 0.7);
   color: #fff;
   height: 80px;
   box-sizing: border-box;
- padding : 16px 104px 0px;
+  padding: 16px 104px 0px;
 }
 
-
-.navigation-saved{
+.navigation-saved {
   border-bottom: 1px solid rgb(211, 209, 209);
 }
 
@@ -20,9 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
-
 
 .navigation__menu {
   display: flex;
@@ -36,7 +33,6 @@
   padding: 0;
   margin: 0;
 }
-
 
 .navigation__menu-button {
   display: none;
@@ -62,10 +58,9 @@
   top: 6px;
 }
 
-.navigation__menu-button-line:nth-child(2){
-   top: 50%;
+.navigation__menu-button-line:nth-child(2) {
+  top: 50%;
   transform: translateY(-50%);
-
 }
 .navigation__menu-button-line:nth-child(3) {
   bottom: 6px;
@@ -76,7 +71,7 @@
 }
 
 .navigation__menu-button_open .navigation__menu-button-line:nth-child(2) {
-opacity: 0;
+  opacity: 0;
 }
 
 .navigation__menu-button_open .navigation__menu-button-line:nth-child(3) {
@@ -88,56 +83,54 @@ opacity: 0;
 }
 
 .navigation__title {
- font-family: Roboto Slab;
-font-weight: 700;
-font-size: 20px;
-letter-spacing: 0px;
+  font-family: Roboto Slab;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0px;
   color: rgba(255, 255, 255, 1);
- display: flex;
+  display: flex;
   align-items: center;
   margin: 0;
   padding: 30px 0 26px 0;
-width: 200px;
- line-height: 24px;
-letter-spacing: 0px;
-vertical-align: middle;
-
+  width: 200px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  vertical-align: middle;
 }
 
- .navigation__username {
-    font-size: 16px;
-    line-height: 20px;
-    font-family: Roboto;
-font-weight: 500;
-font-size: 18px;
-color: rgba(255, 255, 255, 1);
-line-height: 24px;
-letter-spacing: 0px;
-vertical-align: middle;
-
-  }
-.navigation__link{
-    color: rgba(255, 255, 255, 1);
+.navigation__username {
+  font-size: 16px;
+  line-height: 20px;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 1);
+  line-height: 24px;
+  letter-spacing: 0px;
+  vertical-align: middle;
+}
+.navigation__link {
+  color: rgba(255, 255, 255, 1);
   border: none;
   background: none;
   cursor: pointer;
-font-style: normal;
- text-decoration: none;
- display: flex;
+  font-style: normal;
+  text-decoration: none;
+  display: flex;
   align-items: center;
   height: 48px;
   white-space: nowrap;
- font-family: Roboto;
-font-weight: 500;
-font-size: 18px;
-line-height: 24px;
-letter-spacing: 0px;
-text-align: center;
-vertical-align: middle;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.navigation__link.black{
-  color: #000000
+.navigation__link.black {
+  color: #000000;
 }
 
 .navigation__button_sign-in {
@@ -151,35 +144,35 @@ vertical-align: middle;
   color: #ffffff;
   min-width: 176px;
   line-height: 24px;
-letter-spacing: 0px;
-text-align: center;
-vertical-align: middle;
+  letter-spacing: 0px;
+  text-align: center;
+  vertical-align: middle;
 }
-.navigation__saved_black{
+.navigation__saved_black {
   color: black;
-    border: none;
+  border: none;
   background: none;
   cursor: pointer;
-font-style: normal;
- text-decoration: none;
+  font-style: normal;
+  text-decoration: none;
 
- display: flex;
+  display: flex;
   align-items: center;
   height: 48px;
   white-space: nowrap;
- font-family: Roboto;
-font-weight: 500;
-font-size: 18px;
-line-height: 24px;
-letter-spacing: 0px;
-text-align: center;
-vertical-align: middle;
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.navigation__link_underline{
+.navigation__link_underline {
   position: relative;
 }
-.navigation__link_underline::after{
+.navigation__link_underline::after {
   content: "";
   border-bottom: 3px solid white;
   content: "";
@@ -190,10 +183,9 @@ vertical-align: middle;
   height: 3px;
 }
 
-.navigation__saved_white::after{
+.navigation__saved_white::after {
   content: "";
   border-bottom: none;
-
 }
 
 .navigation__button_logged-in {
@@ -208,10 +200,7 @@ vertical-align: middle;
   border: 1px solid white;
 }
 
-
-
-
-  .navigation__logout-icon {
+.navigation__logout-icon {
   width: 24px;
   height: 24px;
   margin-left: 10px;
@@ -219,22 +208,19 @@ vertical-align: middle;
   opacity: 1;
 }
 
-.navigation__logo_white, .navigation__logo_black{
+.navigation__logo_white,
+.navigation__logo_black {
   margin: 0;
 }
 
-
-.navigation__button{
+.navigation__button {
   font-family: Roboto;
-font-weight: 500;
-font-size: 18px;
-display: flex;
+  font-weight: 500;
+  font-size: 18px;
+  display: flex;
   align-items: center;
   gap: 15px;
-
-
 }
-
 
 .header__menu-btn {
   display: none; /* Hidden on desktop */
@@ -257,8 +243,6 @@ display: flex;
   transform: rotate(45deg) translate(5px, 5px);
 }
 
-
-
 .header__menu-btn_active .header__menu-line:nth-child(3) {
   transform: rotate(-45deg) translate(7px, -6px);
 }
@@ -278,58 +262,54 @@ display: flex;
   }
 }
 
-
-
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-    .navigation {
-        padding: 16px 40px;
-    }
-
-    .navigation__button{
-      gap:30px
-    }
-
-    .navigation__button_logged-in{
-      height: 40px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
   .navigation {
     padding: 16px 40px;
   }
-    .navigation__container {
-        margin-right: 12px;
-    }
-    .navigation__container {
-    display: flex
-;
+
+  .navigation__button {
+    gap: 30px;
+  }
+
+  .navigation__button_logged-in {
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navigation {
+    padding: 16px 40px;
+  }
+  .navigation__container {
+    margin-right: 12px;
+  }
+  .navigation__container {
+    display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-}
+  }
 
-.navigation__menu-content{
-  gap: 16px;
-}
+  .navigation__menu-content {
+    gap: 16px;
+  }
 
-.navigation__link {
+  .navigation__link {
     font-size: 16px;
     line-height: 24px;
     height: 24px;
   }
 
-   .navigation__button{
+  .navigation__button {
     gap: 40px;
   }
 
-   .navigation__username {
+  .navigation__username {
     font-size: 16px;
     line-height: 20px;
   }
 
-   .navigation__button_sign-in {
+  .navigation__button_sign-in {
     height: 40px;
     min-width: 152px;
     font-size: 16px;
@@ -340,15 +320,15 @@ display: flex;
   .navigation {
     padding: 16px 16px;
   }
-    .navigation__menu-content {
+  .navigation__menu-content {
     gap: 12px;
   }
 
-   .navigation__container {
+  .navigation__container {
     margin-right: 12px;
   }
 
-   .navigation__title {
+  .navigation__title {
     width: 150px;
   }
 
@@ -358,7 +338,7 @@ display: flex;
     height: 24px;
   }
 
-   .navigation__button_logged-in {
+  .navigation__button_logged-in {
     padding: 0 12px;
     height: 36px;
     min-width: auto;
@@ -367,14 +347,14 @@ display: flex;
     justify-content: center;
   }
 
-    .navigation__username {
+  .navigation__username {
     font-size: 14px;
     margin-right: 4px;
     display: flex;
     align-items: center;
   }
 
-   .navigation__logout-icon {
+  .navigation__logout-icon {
     width: 20px;
     height: 20px;
     margin-left: 4px;
@@ -382,14 +362,13 @@ display: flex;
     align-items: center;
   }
 
-    .navigation__button_sign-in {
+  .navigation__button_sign-in {
     height: 36px;
     min-width: 132px;
     font-size: 14px;
     padding: 0 12px;
   }
 }
-
 
 @media screen and (max-width: 480px) {
   .navigation {
@@ -402,3 +381,8 @@ display: flex;
   }
 }
 
+@media screen and (min-width: 481px) {
+  .navigation__menu {
+    display: block;
+  }
+}
